<resources>
    <string name="app_name">Sports Pal</string>
    <string name="action_settings">Settings</string>
    <string name="please_wait">Please Wait....</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_valid_email">Please enter valid Email</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="reset_your_password">RESET YOUR PASSWORD</string>
    <string name="send">SEND</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="please_check_internet">No Internet Connection!</string>

    <string name="fb_app_id">1187982621233803</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="submit">Submit</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token....</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token, sending the fetched token to the server or subscribing to the PubSub topic. Please try running the sample again.</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>HOME</item>
        <item>SHARE</item>
        <item>NOTIFICATIONS</item>
        <item>SETTINGS</item>
        <item>LOGOUT</item>
    </string-array>

    <string name="title_home">HOME</string>
    <string name="title_share">SHARE</string>
    <string name="title_play">PLAY</string>
    <string name="title_add">ADD</string>
    <string name="title_chat">CHAT</string>
    <string name="title_profile">PROFILE</string>
    <string name="title_news">NEWS</string>
    <string name="title_settings">SETTINGS</string>
    <string name="title_logout">LOGOUT</string>
    <string name="title_notifications">NOTIFICATIONS</string>

    <string name="search">Search</string>

    <!-- Sign Up Screen-->
    <string name="please_enter_confirm_password">Please enter confirm Password</string>
    <string name="please_enter_valid_password">Your Passwords do not match</string>
    <string name="please_enter_name">Please enter Name</string>
    <string name="please_enter_dob">Please enter DOB</string>
    <string name="please_enter_sex">Please enter Gender</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="pick_location">Pick Location</string>
    <string name="description">Description</string>

    <!-- Main Screen-->
    <string name="news">NEWS</string>
    <string name="play">PLAY</string>
    <string name="add">ADD</string>
    <string name="chat">CHAT</string>
    <string name="profile">PROFILE</string>
    <string name="sports">Sports</string>
    <string name="players">Players</string>
    <string name="teams">Teams</string>
    <string name="game">Game</string>

    <!-- Create New Game Screen-->
    <string name="sports_name">SPORTS NAME</string>
    <string name="team_type">TEAM TYPE</string>
    <string name="team_name">TEAM NAME</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="time_format">HH:MM</string>
    <string name="create_new_game">CREATE NEW GAME</string>
    <string name="pick_address">PICK ADDRESS</string>
    <string name="join_game">JOIN THE GAME</string>
    <string name="add_team_member">Add Team Member</string>
    <string name="limit">MEMBER LIMIT</string>
    <string name="game_mode">GAME STATUS</string>

    <!-- Create New Team Screen-->
    <string name="team_sport">TEAM SPORT</string>
    <string name="corporate_group">CORPORATE GROUP</string>
    <string name="corporate">CORPORATE</string>
    <string name="private_text">PRIVATE</string>
    <string name="select_sports">Select Sports</string>
    <string name="select_team">Select Team</string>
    <string name="select_team_type">Select Team Type</string>
    <string name="join_team">JOIN THE TEAM</string>

    <!-- Profile Screen-->
    <string name="preferences">Prefrences</string>
    <string name="location">Location</string>
    <string name="advanced">Advanced</string>

    <!-- Notification Screen-->
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>


</resources>
