<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutBottomBar"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/black"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:weightSum="5">

    <LinearLayout
        android:id="@+id/layout_news"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/newsfeed" />

        <com.tanzil.sportspal.customUi.MyTextView
            android:id="@+id/news_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/news"
            android:textColor="@color/white"
            android:textSize="@dimen/bottomTextsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_play"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/play" />

        <com.tanzil.sportspal.customUi.MyTextView
            android:id="@+id/play_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/play"
            android:textColor="@color/bottom_bar_text"
            android:textSize="@dimen/bottomTextsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/add" />

        <com.tanzil.sportspal.customUi.MyTextView
            android:id="@+id/add_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add"
            android:textColor="@color/bottom_bar_text"
            android:textSize="@dimen/bottomTextsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_chat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/chat" />

        <com.tanzil.sportspal.customUi.MyTextView
            android:id="@+id/chat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chat"
            android:textColor="@color/bottom_bar_text"
            android:textSize="@dimen/bottomTextsize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/profile" />

        <com.tanzil.sportspal.customUi.MyTextView
            android:id="@+id/profile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/bottom_bar_text"
            android:textSize="@dimen/bottomTextsize" />
    </LinearLayout>
</LinearLayout>
