<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:baselineAligned="false"
        android:gravity="end|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/check" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_user_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:layout_margin="10dp"
        android:src="@drawable/customer_img" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:padding="10dp">

            <com.tanzil.sportspal.customUi.MyEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_transparent_bg"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/edit_text_size" />

            <com.tanzil.sportspal.customUi.MyEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_transparent_bg"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/edit_text_size" />

            <com.tanzil.sportspal.customUi.MyEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_transparent_bg"
                android:gravity="center"
                android:hint="@string/last_name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/edit_text_size" />

            <com.tanzil.sportspal.customUi.MyEditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_transparent_bg"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/dob"
                android:inputType="date"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/edit_text_size" />

            <com.tanzil.sportspal.customUi.MyButton
                android:id="@+id/btn_preferences"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_button_height"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_green_bg"
                android:padding="10dp"
                android:text="@string/preferences"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size" />

            <com.tanzil.sportspal.customUi.MyButton
                android:id="@+id/btn_location"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_button_height"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_green_bg"
                android:drawableEnd="@drawable/pin"
                android:drawableRight="@drawable/pin"
                android:padding="10dp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>