<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/animation_background" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_top_margin"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/splash_margin"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.tanzil.sportspal.customUi.MyEditText
                android:id="@+id/et_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="1"
                android:background="@drawable/edittext_transparent_bg"
                android:hint="@string/name"
                android:inputType="textCapWords"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/edit_text_size" />

            <TextView
                android:layout_width="@dimen/splash_margin"
                android:layout_height="wrap_content" />

            <com.tanzil.sportspal.customUi.MyEditText
                android:id="@+id/et_last_name"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="1"
                android:background="@drawable/edittext_transparent_bg"
                android:hint="@string/last_name"
                android:inputType="textCapWords"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/edit_text_size" />
        </LinearLayout>

        <com.tanzil.sportspal.customUi.MyEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_transparent_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/edit_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.tanzil.sportspal.customUi.MyEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="1"
                android:background="@drawable/edittext_transparent_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/edit_text_size" />

            <TextView
                android:layout_width="@dimen/splash_margin"
                android:layout_height="wrap_content" />

            <com.tanzil.sportspal.customUi.MyEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="1"
                android:background="@drawable/edittext_transparent_bg"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/edit_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.tanzil.sportspal.customUi.MyEditText
                android:id="@+id/et_dob"
                android:layout_width="0dp"
                android:layout_height="@dimen/edit_text_height"
                android:layout_weight="1"
                android:background="@drawable/edittext_transparent_bg"
                android:focusable="false"
                android:hint="@string/dob"
                android:inputType="date"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/edit_text_size" />

            <!--<TextView-->
                <!--android:layout_width="@dimen/splash_margin"-->
                <!--android:layout_height="wrap_content" />-->

            <!--<com.tanzil.sportspal.customUi.MyEditText-->
            <!--android:id="@+id/et_sex"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="@dimen/edit_text_height"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/edittext_transparent_bg"-->
            <!--android:hint="@string/gender"-->
            <!--android:inputType="textCapWords"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:paddingRight="10dp"-->
            <!--android:textColor="@color/edit_text_color"-->
            <!--android:textColorHint="@color/hint_color"-->
            <!--android:textSize="@dimen/edit_text_size" />-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/selected_male" />
                <TextView
                    android:layout_width="@dimen/splash_margin"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/img_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:padding="10dp"
                    android:src="@drawable/unselected_female" />
            </LinearLayout>
        </LinearLayout>


        <com.tanzil.sportspal.customUi.MyButton
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_green_bg"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>
</RelativeLayout>