<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/animation_background" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_top_margin"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_fblogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:paddingLeft="@dimen/splash_margin"
            android:paddingRight="@dimen/splash_margin"
            android:scaleType="fitXY"
            android:src="@drawable/facebook" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/splash_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <com.tanzil.sportspal.customUi.MyButton
                android:id="@+id/sign_up_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@drawable/button_sign_up_green_bg"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size" />

            <TextView
                android:layout_width="@dimen/splash_margin"
                android:layout_height="wrap_content" />

            <com.tanzil.sportspal.customUi.MyButton
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:background="@drawable/button_green_bg"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>